tests/negative/const_reassign.tx
// EXPECTED: COMPILE_ERROR
// Description: Verify that reassignment to a constant variable causes a compile error.

const PI: float = 3.14159;
PI = 3.14; // Error: Cannot assign to constant variable
